IPA: drop implicit_section again

As mentioned in the PR, since 4656461585bfd0b9 implicit_section
was not set to false when set_section was called with the argument
equal to NULL.

gcc/ChangeLog:

	PR ipa/98057
	* symtab.c (symtab_node::set_section_for_node): Drop
	implicit_section if x_section is NULL.

gcc/testsuite/ChangeLog:

	PR ipa/98057
	* g++.dg/ipa/pr98057.C: New test.